--- a/components/Navbar/navBar.css
+++ b/components/Navbar/navBar.css
@@ -1,57 +1,117 @@
-.header-container{
-    background-color: transparent !important;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    padding: 20px 0px;
-    z-index: 3000;
-}
-.header-container .row-qh{
-width: 100%;
-display: flex;
-justify-content: space-between;
+.header-container {
+  background-color: transparent !important;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding: 5px 0px;
+  z-index: 3000;
 }
 
-.linkswraper{
-    display: flex;
-    align-items: center;
-    gap: 20px;
+.header-container.sticky {
+  background-color: black !important;
 }
-  li {
-    list-style-type: none;
+
+.header-container .row-qh {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.linkswraper {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+
+li {
+  list-style-type: none;
+}
+
+.nav-link {
+  display: block;
+  text-decoration: none;
+  padding: 0.5rem 1rem 0.5rem 1rem;
+  color: #fff;
+  font-weight: 700;
+  text-transform: capitalize;
+  cursor: pointer;
+
+  &:hover {
+    background: #000;
+    color: #000;
+    padding: 0.5rem 1rem 0.5rem 1.3rem;
   }
-  .nav-link {
-    display: block;
-    text-decoration: none;
-    padding: 0.5rem 1rem 0.5rem 1rem;
-    color: #fff;
-    font-weight: 700;
-    text-transform: capitalize;
-    cursor: pointer;
-    &:hover {
-      background: #000;
-      color: #000;
-      padding: 0.5rem 1rem 0.5rem 1.3rem;
-    }
+}
+
+.header-icons {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+
+.header-icons .icon {
+  color: #fff;
+}
+
+@media (min-width: 768px) {
+  height: auto;
+  /* otherwise links won't show up */
+  display: flex;
+  margin: 0 auto;
+
+  .nav-link:hover {
+    background: #fff;
+    padding: 0.5rem 1rem;
   }
-  .header-icons{
+
+  .toggle-icon {
+    display: none;
+  }
+}
+
+@media (max-width: 650px) {
+
+  /* css de nabvar */
+  .header-container {
+    padding: 10px 20px !important;
+  }
+
+  .header-logo {
     display: flex;
     align-items: center;
-    gap: 20px;
+    justify-content: space-between;
+    color: #fff !important;
+    width: 100%;
   }
-  .header-icons .icon{
-    color: #fff;
+
+  .linkswraper {
+    position: fixed;
+    top: 120px;
+    left: 0;
+    right: 0;
+    flex-direction: column;
+    background-color: #fff;
+    width: 0;
+    padding: 0;
+    transition: all ease-in .5s;
+    visibility: hidden;
   }
-  @media (min-width: 768px) {
-    height: auto; /* otherwise links won't show up */
-    display: flex;
-    margin: 0 auto;
-    .nav-link:hover {
-      background: #fff;
-      padding: 0.5rem 1rem;
-    }
-    .toggle-icon{
-        display: none;
-    }
+
+  .linkswraper.active {
+    visibility: visible;
+    display: flex !important;
+    width: 100%;
+    padding: 0 5px;
   }
+
+  .linkswraper .nav-link {
+    color: #000;
+    padding: 20px 0px !important;
+  }
+
+  .header-icons {
+    display: none !important;
+  }
+}
