--- a/components/Navbar/navBar.css
+++ b/components/Navbar/navBar.css
@@ -37,11 +37,11 @@ li {
   font-weight: 700;
   text-transform: capitalize;
   cursor: pointer;
+  transition: all 0.5s;
 
   &:hover {
     background: #000;
-    color: #000;
-    padding: 0.5rem 1rem 0.5rem 1.3rem;
+    color: #fff;
   }
 }
 
