--- a/components/Main/menuFilter.module.css
+++ b/components/Main/menuFilter.module.css
@@ -1,10 +1,8 @@
 .menu_categories {
-    width: 100%;
+    width: 20%;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: column;
     gap: 20px;
-    margin-bottom: 40px;
 }
 
 .menu_categories>button {
