modificaciones jira llorona test

--- a/styles/global.css
+++ b/styles/global.css
@@ -118,7 +118,7 @@ h1 {
 } */
 
 .bannerHome {
-  background-image: url("../public/images/bannercalaca.png");
+  background-image: url("../public/images/franquicia/lugarafuera.jpg");
   background-size: cover !important;
   background-repeat: no-repeat;
 
