--- a/components/Navbar/navBar.css
+++ b/components/Navbar/navBar.css
@@ -40,8 +40,7 @@ li {
   transition: all 0.5s;
 
   &:hover {
-    background: #000;
-    color: #fff;
+    color: rgb(62, 235, 145);
   }
 }
 
@@ -62,7 +61,7 @@ li {
   margin: 0 auto;
 
   .nav-link:hover {
-    background: #fff;
+    background: rgb(62, 235, 145);
     padding: 0.5rem 1rem;
   }
 
