--- a/components/Main/card.module.css
+++ b/components/Main/card.module.css
@@ -6,6 +6,10 @@
     justify-content: center;
     gap: 20px;
     margin-bottom: 40px;
+    border-radius: 10px !important;
+    margin-left: 20px;
+    margin-right: 20px;
+    flex-wrap: wrap;
 }
 
 .cardContainer>a {
