--- a/components/Navbar/navBar.css
+++ b/components/Navbar/navBar.css
@@ -25,10 +25,6 @@
 }
 
 
-li {
-  list-style-type: none;
-}
-
 .nav-link {
   display: block;
   text-decoration: none;
@@ -37,12 +33,8 @@ li {
   font-weight: 700;
   text-transform: capitalize;
   cursor: pointer;
-  transition: all 0.5s;
+  transition: all 0.5s;}
 
-  &:hover {
-    color: rgb(62, 235, 145);
-  }
-}
 
 .header-icons {
   display: flex;
@@ -54,16 +46,11 @@ li {
   color: #fff;
 }
 
-@media (min-width: 768px) {
-  height: auto;
-  /* otherwise links won't show up */
-  display: flex;
-  margin: 0 auto;
 
-  .nav-link:hover {
-    background: rgb(62, 235, 145);
-    padding: 0.5rem 1rem;
-  }
+@media only screen and (min-width: 768px) {
+
+
+
 
   .toggle-icon {
     display: none;
