--- a/components/Main/card.module.css
+++ b/components/Main/card.module.css
@@ -20,7 +20,36 @@
     height: auto !important;
 }
 
+.card_box {
+    width: 20%;
+    background-color: #fff;
+    box-shadow: 0px 0px 10px 2px #ececec;
+    overflow: hidden;
+    height: auto !important;
+    margin: 20px 0px;
+}
 
+.card_box img {
+    width: 100%;
+    height: 400px;
+    border-radius: 10px;
+}
+
+
+
+@media screen and (max-width: 1250px) {
+
+    .card_box {
+        width: 30%;
+    }
+}
+
+@media screen and (max-width: 950px) {
+
+    .card_box {
+        width: 45%;
+    }
+}
 
 @media screen and (max-width: 650px) {
     .cardContainer {
@@ -29,6 +58,10 @@
     }
 
     .cardContainer>a {
+        width: 100%;
+    }
+
+    .card_box {
         width: 100%;
     }
 }
