--- a/components/Navbar/navBar.css
+++ b/components/Navbar/navBar.css
@@ -26,6 +26,9 @@
 
 .linkswraper li {
   height: max-content;
+  list-style: none;
+  width: 100%;
+  text-align: center;
 }
 
 .linkswraper li::marker {
@@ -93,6 +96,7 @@
     padding: 0;
     transition: all ease-in .5s;
     visibility: hidden;
+    overflow: hidden;
   }
 
   .linkswraper.active {
