ultimo cambio para llorona 2

--- a/styles/global.css
+++ b/styles/global.css
@@ -260,8 +260,8 @@ background-repeat: no-repeat;
   font-size: 1.25rem;
   line-height: 1.5;
   padding: 0.5rem 1rem;
-  background-color: #28a745;
-  border-color: #28a745;
+  background-color: #28a745 !important;
+  border-color: #28a745 !important;
   color: #fff !important;
 }
 
