--- a/styles/global.css
+++ b/styles/global.css
@@ -128,7 +128,7 @@ h1 {
 
 
 .bannerPremios {
-  background-image: url("https://imagenesrutalab.s3.amazonaws.com/llorona/HAMBURGUESA_jack_suizo.JPG") !important;
+  background-image: url("https://imagenesrutalab.s3.amazonaws.com/llorona/nextImage/hamburguesas/1528926142blue-cheese-and-caramelized-onion-burgers-large.jpg") !important;
   background-size: cover !important;
   background-repeat: no-repeat;
   height: 90vh;
