--- a/styles/global.css
+++ b/styles/global.css
@@ -471,6 +471,15 @@ ul {
     flex-wrap: wrap;
   }
 
+  .bannerPremios {
+  background-image: url("https://imagenesrutalab.s3.amazonaws.com/llorona/nextImage/hamburguesaChile.jpg") !important;
+  background-size: cover !important;
+  background-repeat: no-repeat;
+  height: 90vh;
+  background-position: bottom;
+  position: relative;
+}
+
 
 
      .bannerHomeFinal {
