--- a/styles/global.css
+++ b/styles/global.css
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: 'Gagalin-Regular';
-  src: url('./Gagalin-Regular.otf')
+  src: url('/Gagalin-Regular.otf')
 }
 
 body {
