--- a/styles/global.css
+++ b/styles/global.css
@@ -1,13 +1,25 @@
-@import url('https://fonts.cdnfonts.com/css/berthold-akzidenz-grotesk-be-9');
+@import url("https://fonts.cdnfonts.com/css/berthold-akzidenz-grotesk-be-9");
 
 @font-face {
-  font-family: 'Gagalin-Regular';
-  src: url('/Gagalin-Regular.otf')
+  font-family: "Gagalin-Regular";
+  src: url("/Gagalin-Regular.otf");
 }
 
 body {
   margin: 0;
   padding: 0;
+}
+@keyframes marquee {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
+}
+
+.animate-marquee {
+  animation: marquee 15s linear infinite;
 }
 
 h1 {
@@ -54,15 +66,15 @@ h1 {
   width: 200px;
   height: 300px;
   border-radius: 10px;
-  object-fit: cover
+  object-fit: cover;
 }
 
 .imagenReserva {
   width: 300px;
   height: 350px;
   border-radius: 10px;
-object-fit: cover;
-object-position: top;
+  object-fit: cover;
+  object-position: top;
 }
 
 .imagenTopTexto {
@@ -77,7 +89,7 @@ object-position: top;
   border-radius: 10px;
   width: 300px;
   height: 400px;
-  object-fit: cover
+  object-fit: cover;
 }
 
 .buttonComponent {
@@ -103,9 +115,8 @@ object-position: top;
   color: rgba(0, 0, 0, 0.85);
   font-size: 20px;
   text-align: center;
-  margin: 0
+  margin: 0;
 }
-
 
 .iconoAbajoTexto1Home {
   width: 150px;
@@ -150,8 +161,6 @@ object-position: top;
   background-position: left !important;
 }
 
-
-
 .bannerHomeFinal {
   background-image: url("https://imagenesrutalab.s3.amazonaws.com/llorona/nextImage/lugarafuera.jpg");
   background-size: cover !important;
@@ -169,7 +178,6 @@ object-position: top;
   background-position: center;
   position: relative;
 }
-
 
 .bannerPremios {
   background-image: url("https://imagenesrutalab.s3.amazonaws.com/llorona/nextImage/hamburguesas/1528926142blue-cheese-and-caramelized-onion-burgers-large.jpg") !important;
@@ -460,7 +468,6 @@ ul {
     font-size: 13px;
   }
 
-
   .contenedorMenu {
     flex-wrap: nowrap;
   }
@@ -490,7 +497,6 @@ ul {
     background-position: center;
   }
 
-
   .bannerHomeTexto {
     font-size: 30px !important;
     color: white !important;
@@ -507,61 +513,58 @@ ul {
   }
 
   .bannerPremios {
-  background-image: url("https://imagenesrutalab.s3.amazonaws.com/llorona/nextImage/hamburguesaChile.jpg") !important;
-  background-size: cover !important;
-  background-repeat: no-repeat;
-  height: 90vh;
-  background-position: bottom;
-  position: relative;
-}
+    background-image: url("https://imagenesrutalab.s3.amazonaws.com/llorona/nextImage/hamburguesaChile.jpg") !important;
+    background-size: cover !important;
+    background-repeat: no-repeat;
+    height: 90vh;
+    background-position: bottom;
+    position: relative;
+  }
 
-.bannerVacantes {
-  background-image: url("https://imagenesrutalab.s3.amazonaws.com/llorona/nextImage/vacante/Screenshot+2023-06-03+at+3.43.28.png");
-  background-size: cover !important;
-  background-repeat: no-repeat;
-  height: 90vh;
-  background-position: center;
-  position: relative;
-}
+  .bannerVacantes {
+    background-image: url("https://imagenesrutalab.s3.amazonaws.com/llorona/nextImage/vacante/Screenshot+2023-06-03+at+3.43.28.png");
+    background-size: cover !important;
+    background-repeat: no-repeat;
+    height: 90vh;
+    background-position: center;
+    position: relative;
+  }
 
+  .bannerHomeFinal {
+    background-image: url("https://imagenesrutalab.s3.amazonaws.com/llorona/nextImage/portadaHome/muertosDiamexicollorona.jpg") !important;
+    background-size: cover !important;
+    background-repeat: no-repeat;
+    height: 90vh;
+    background-position: center;
+    position: relative;
+  }
 
+  .bannerSalsa {
+    background-image: url("https://imagenesrutalab.s3.amazonaws.com/llorona/nextImage/grupo+cubano+en+vivo.JPG");
+    background-size: cover !important;
+    background-repeat: no-repeat;
+    height: 90vh !important;
+    background-position: center;
+    position: relative;
+  }
 
-     .bannerHomeFinal {
-  background-image: url("https://imagenesrutalab.s3.amazonaws.com/llorona/nextImage/portadaHome/muertosDiamexicollorona.jpg") !important;
-  background-size: cover !important;
-  background-repeat: no-repeat;
-  height: 90vh;
-  background-position: center;
-  position: relative;
-}
+  .bannerHomeIngles {
+    background-image: url("https://imagenesrutalab.s3.amazonaws.com/llorona/nextImage/portadaHome/muertosDiamexicollorona.jpg") !important;
+    background-size: cover !important;
+    background-repeat: no-repeat;
+    height: 90vh;
+    background-position: center;
+    position: relative;
+  }
 
-.bannerSalsa {
-  background-image: url("https://imagenesrutalab.s3.amazonaws.com/llorona/nextImage/grupo+cubano+en+vivo.JPG");
-  background-size: cover !important;
-  background-repeat: no-repeat;
-  height: 90vh !important;
-  background-position: center;
-  position: relative;
-}
-
-.bannerHomeIngles {
-  background-image: url("https://imagenesrutalab.s3.amazonaws.com/llorona/nextImage/portadaHome/muertosDiamexicollorona.jpg") !important;
-  background-size: cover !important;
-  background-repeat: no-repeat;
-  height: 90vh;
-  background-position: center;
-  position: relative;
-}
-
-    .bannerFranquicias {
-  background-image: url("https://imagenesrutalab.s3.amazonaws.com/llorona/nextImage/fotosBanner/IMG_0904.jpg") !important;
-  background-size: cover !important;
-  background-repeat: no-repeat;
-  height: 90vh;
-  background-position: center;
-  position: relative;
-}
-
+  .bannerFranquicias {
+    background-image: url("https://imagenesrutalab.s3.amazonaws.com/llorona/nextImage/fotosBanner/IMG_0904.jpg") !important;
+    background-size: cover !important;
+    background-repeat: no-repeat;
+    height: 90vh;
+    background-position: center;
+    position: relative;
+  }
 
   .card-menu {
     width: 100%;
@@ -588,7 +591,6 @@ ul {
     margin-right: 0px;
   }
 
-
   .boton_orina {
     margin-top: 2.4rem !important;
   }
@@ -597,9 +599,6 @@ ul {
     display: flex;
     align-items: center;
   }
-
-
-
 
   /* Calendario*/
   .tituloCalendario {
@@ -692,9 +691,6 @@ ul {
   .descripcion_footer {
     font-size: 11px !important;
   }
-
-
-
 }
 
 /*revisar*/
@@ -870,7 +866,6 @@ p {
   z-index: 2500;
   padding: 80px 20px !important;
   padding-bottom: 0 !important;
-
 }
 
 .menu-detail .row-qh {
@@ -884,7 +879,7 @@ p {
   font-size: 22px;
   display: block;
   text-align: center;
-  font-family: 'Berthold Akzidenz Grotesk BE', sans-serif;
+  font-family: "Berthold Akzidenz Grotesk BE", sans-serif;
 }
 
 .container-cards {
@@ -912,7 +907,6 @@ p {
 }
 
 .card-detail .separator .content-name-plat {
-
   display: block;
   margin-right: 20px;
   font-size: 22px;
@@ -962,7 +956,6 @@ p {
   }
 }
 
-
 /* css promociones */
 .subbanner {
   margin-top: 40px;
@@ -1008,7 +1001,11 @@ p {
   bottom: 0;
   right: 0;
   background: rgb(0, 0, 0);
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.8631827731092436) 0%, rgba(255, 255, 255, 0.04525560224089631) 100%);
+  background: linear-gradient(
+    0deg,
+    rgba(0, 0, 0, 0.8631827731092436) 0%,
+    rgba(255, 255, 255, 0.04525560224089631) 100%
+  );
   z-index: 1000;
 }
 
@@ -1069,7 +1066,7 @@ p {
   line-height: 32px;
 }
 
-.subbanner-text .shopnow>a {
+.subbanner-text .shopnow > a {
   font-size: 16px;
   color: #000000;
   font-weight: 500;
