cambios en el inicio

--- a/styles/global.css
+++ b/styles/global.css
@@ -168,6 +168,7 @@ h1 {
   height: 90vh;
   background-position: center;
   position: relative;
+  background-attachment: fixed;
 }
 
 .bannerVacantes {
