--- a/components/NavBarEs/navBar.css
+++ b/components/NavBarEs/navBar.css
@@ -27,7 +27,6 @@
 .linkswraper li {
   height: max-content;
   list-style: none;
-  width: 100%;
   text-align: center;
 }
 
@@ -36,18 +35,17 @@
   content: "";
 }
 
-
 .nav-link {
   display: block;
   text-decoration: none;
   padding: 0.5rem 1rem 0.5rem 1rem;
   color: #fff;
   font-weight: 700;
+  font-size: 16px;
   text-transform: capitalize;
   cursor: pointer;
   transition: all 0.5s;
 }
-
 
 .header-icons {
   display: flex;
@@ -59,19 +57,13 @@
   color: #fff;
 }
 
-
 @media only screen and (min-width: 768px) {
-
-
-
-
   .toggle-icon {
     display: none;
   }
 }
 
 @media (max-width: 650px) {
-
   /* css de nabvar */
   .header-container {
     padding: 10px 20px !important;
@@ -85,7 +77,7 @@
     width: 100%;
   }
 
-    .header-derecha {
+  .header-derecha {
     display: flex;
     align-items: center;
     justify-content: flex-end;
@@ -102,7 +94,7 @@
     background-color: #fff;
     width: 0;
     padding: 0;
-    transition: all ease-in .5s;
+    transition: all ease-in 0.5s;
     visibility: hidden;
     overflow: hidden;
   }
