--- a/styles/global.css
+++ b/styles/global.css
@@ -11,7 +11,7 @@ body {
 }
 @keyframes marquee {
   0% {
-    transform: translateX(100%);
+    transform: translateX(0);
   }
   100% {
     transform: translateX(-100%);
