--- a/components/Main/title.module.css
+++ b/components/Main/title.module.css
@@ -1,32 +1,31 @@
 .fontTitlemain {
-    text-align: center;
-    font-size: 40px;
-    font-weight: 500;
+  text-align: center;
+  font-size: 40px;
+  font-weight: 500;
 }
 
-.bullets{
-    list-style-type: circle !important;
-    color: black;
+.bullets {
+  list-style-type: circle !important;
+  color: black;
 }
 
 ul.a {
   list-style-type: circle;
 }
 
-.list{
-    list-style-type:circle !important
+.list {
+  list-style-type: circle !important;
 }
 
 .fontTitleSub {
-   letter-spacing: 0.3rem;
-  font-size: 2rem;
-  color: #3eeb91;
+  font-size: 1.5rem;
+  color: #1c8665;
   text-align: center !important;
   font-weight: 800;
 }
 
 .fontTitleline {
-    text-align: center;
-    font-size: 30px;
-    font-weight: 500;
+  text-align: center;
+  font-size: 1rem;
+  font-weight: 500;
 }
