--- a/styles/global.css
+++ b/styles/global.css
@@ -520,6 +520,18 @@ ul {
     font-size: 13px;
   }
 
+  .bannerHome {
+  background-image: url("https://imagenesrutalab.s3.amazonaws.com/llorona/nextImage/lugarafuera.jpg");
+  background-size: cover !important;
+  background-repeat: no-repeat;
+
+  background-attachment: fixed;
+  height: 100vh;
+  background-position: center;
+  position: relative;
+  /* background-color: #2c2c2c; */
+}
+
   .textoFotosHome {
     margin-top: 0px;
   }
